--- a/src/components/CurrentlyLearning.astro
+++ b/src/components/CurrentlyLearning.astro
@@ -23,6 +23,11 @@ import background from '../assets/background.svg';
 	</a>
 </div>
 
+new ideas: 
+* mini pc (sub for homeassistant yellow) with proxmox for homeassisant and webserver
+* surface 4 for homeassistant dashboard?
+* raspy 4b as webserver
+
 <style>
 	#background {
 		position: fixed;
