--- a/src/components/CurrentlyLearning.astro
+++ b/src/components/CurrentlyLearning.astro
@@ -10,9 +10,15 @@ import background from '../assets/background.svg';
 			<h2>
         How to set up a static website with GitHub Pages and Astro
 			</h2>
-      <ol>1. Ordered Domain (from Hosteurope) - seems not to be so quick... still waiting</ol>
+      <ol>1. Ordered Domain (from Hosteurope) - seems not to be so quick... still waiting --> took about 12 hours till first reaction/setup</ol>
       <ol>2. Setup local Repo with Astro, push it to GitHub as a public Repo</ol>
       <ol>3. Setup GitHub Pages on GitHub for the pushed repo</ol>
+
+<h2>Open Points:</h2>
+<p>
+	* cert check in github failing?
+	* github pipeline for building
+</p>
 		</section>
 	</main>
 		<!-- <h2>What's New in Astro 5.0?</h2> -->
@@ -23,10 +29,12 @@ import background from '../assets/background.svg';
 	</a>
 </div>
 
+
 new ideas: 
 * mini pc (sub for homeassistant yellow) with proxmox for homeassisant and webserver
 * surface 4 for homeassistant dashboard?
 * raspy 4b as webserver
+* Tailgate or so for VPN 
 
 <style>
 	#background {
