Update .gitignore and remove unused SVG and HTML files; add new learning resource link

--- a/src/components/CurrentlyLearning.astro
+++ b/src/components/CurrentlyLearning.astro
@@ -35,6 +35,7 @@ new ideas:
 * surface 4 for homeassistant dashboard?
 * raspy 4b as webserver
 * Tailgate or so for VPN 
+* Homeassistant minimal dashboar! <a href="https://www.youtube.com/watch?v=A0fMt8IRKoI"></a>
 
 <style>
 	#background {
